k8s/payment.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    expose: 'true'
    secured: 'false'
    serviceType: 'resource'
    path: 'payment'
    version: 'v1'

spec:
  type: ClusterIP
  selector: 
    app: payment
  ports:
  - name: grpc
    port: 50051
    targetPort: grpc-port
  - name: http
    port: 5000
    targetPort: http-port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: payment
        image: registry.gitlab.com/isaiahwong/cluster/api/payment
        imagePullPolicy: IfNotPresent
        ports:
        - name: grpc-port
          containerPort: 50051
        - name: http-port
          containerPort: 5000
