k8s/mongo-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-payment-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: mongo-payment
  template:
    metadata:
      labels:
        component: mongo-payment
    spec:
      volumes:
        - name: mongo-payment-storage
          persistentVolumeClaim:
            claimName: mongo-payment-pvc
      containers:
        - name: mongo-payment
          image: mongo
          ports:
            - name: mongo-port
              containerPort: 27017
          volumeMounts:
            - name: mongo-payment-storage
              mountPath: /data/db
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-payment-service
spec:
  ports:
  - name: tcp
    port: 27017
    targetPort: mongo-port
  selector: 
    component: mongo-payment
  type: ClusterIP

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mongo-payment-policy
spec:
  podSelector:
    matchLabels:
      component: mongo-payment
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: payment
    ports:
    - protocol: TCP
      port: 27017
